tests/array/t_forin_empty_array_11684.nim
discard """
  errormsg: "cannot infer the type of the array"
"""
for _ in []:
  discard